--- a/.env
+++ b/.env
@@ -30,20 +30,20 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
- database.default.hostname = localhost
- database.default.database = ggnrmmfx_school
- database.default.username = ggnrmmfx_school
- database.default.password = swdd040189
- database.default.DBDriver = MySQLi
-database.default.DBPrefix =
- database.default.port = 3306
 #  database.default.hostname = localhost
-#  database.default.database = db_data_sekolah
-#  database.default.username = root
-#  database.default.password = 
+#  database.default.database = ggnrmmfx_school
+#  database.default.username = ggnrmmfx_school
+#  database.default.password = swdd040189
 #  database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 #  database.default.port = 3306
+ database.default.hostname = localhost
+ database.default.database = db_data_sekolah
+ database.default.username = root
+ database.default.password = 
+ database.default.DBDriver = MySQLi
+database.default.DBPrefix =
+ database.default.port = 3306
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4_test
