--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ CI_ENVIRONMENT = development
  database.default.hostname = localhost
  database.default.database = ggnrmmfx_school
  database.default.username = ggnrmmfx_school
- database.default.password = swdd040189
+ database.default.password = 
  database.default.DBDriver = MySQLi
 database.default.DBPrefix =
  database.default.port = 3306
